Adición de campo nombre (para nombre de mascota) + edición de variable nombre(ahora titulo) para nombre compuesto